<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_alt">

    <LinearLayout
        android:id="@+id/withdraw_first_row"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/withdraw_comma"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_comma"
            style="@style/orange_button"
            />

        <Button
            android:id="@+id/withdraw_zero"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_zero"
            style="@style/orange_button"
            />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/orange_button"
            android:visibility="invisible"
            />

        <ImageButton
            android:id="@+id/withdraw_validate"
            android:src="@drawable/ic_validate"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/orange_button"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/withdraw_second_row"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/withdraw_first_row"
        >

        <Button
            android:id="@+id/withdraw_seven"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_seven"
            style="@style/orange_button"
            />

        <Button
            android:id="@+id/withdraw_eight"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_eight"
            style="@style/orange_button"
            />

        <Button
            android:id="@+id/withdraw_nine"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_nine"
            style="@style/orange_button"
            />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/orange_button"
            android:visibility="invisible"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/withdraw_third_row"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/withdraw_second_row"
        >

        <Button
            android:id="@+id/withdraw_four"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_four"
            style="@style/orange_button"
            />

        <Button
            android:id="@+id/withdraw_five"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_five"
            style="@style/orange_button"
            />

        <Button
            android:id="@+id/withdraw_six"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_six"
            style="@style/orange_button"
            />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/orange_button"
            android:visibility="invisible"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/withdraw_fourth_row"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/withdraw_third_row"
        >

        <Button
            android:id="@+id/withdraw_one"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_one"
            style="@style/orange_button"
            />

        <Button
            android:id="@+id/withdraw_two"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_two"
            style="@style/orange_button"
            />

        <Button
            android:id="@+id/withdraw_three"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_three"
            style="@style/orange_button"
            />

        <ImageButton
            android:id="@+id/withdraw_delete"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            style="@style/orange_button"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/withdraw_quantity"
        android:text="0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/withdraw_fourth_row"
        style="@style/quantity_text_style"/>

</RelativeLayout>